# pytest-darker

./: .gitignore  .travis.yml  CHANGES.rst  CONTRIBUTING.rst  README.rst  mypy.ini  pyproject.toml  pytest.ini  pytest_darker.py  setup.cfg  tox.ini
src/pytest_darker/tests/: test_package.py
