[metadata]
name = pytest_darker
author = Antti Kaihola
author_email = 13725+akaihola@users.noreply.github.com
license = BSD
license_file = LICENSE.rst
description = A pytest plugin for checking of modified code using Darker
long_description = file:README.rst
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source Code = https://github.com/akaihola/pytest-darker
    Change Log = https://github.com/akaihola/pytest-darker/CHANGES.rst
url = https://github.com/akaihola/pytest-darker

[options]
py_modules =
    pytest_darker
install_requires =
    darker >= 1.1.0
    typing-extensions ; python_version < "3.8"
python_requires = >=3.6
# From https://pypi.org/project/setuptools-scm/:
# "Many tools, especially those that invoke setup.py for any reason, may continue to
# rely on `setup_requires`. For maximum compatibility with those uses, consider also
# including a `setup_requires` directive."
setup_requires =
  setuptools_scm

[options.entry_points]
pytest11 =
    pytest_darker = pytest_darker

[options.extras_require]
test =
    mypy>=0.782
    pytest>=6.0.1
    pytest-black
    pytest-isort>=1.1.0
    pytest-mypy
